tests/paczka1/small_fuzzy/13936169.err
Error in line 1: OLq3cAPTSK A490 38,5
Error in line 2: OLq3cAPTSK S270 1,6
Error in line 7: x4yQSRq S717 99,6
